
======================================================================

  For the latest news about less, see https://greenwoodsoftware.com/less
  You can also download the latest version of less from there.

  Report bugs, suggestions or comments at 
  https://github.com/gwsw/less/issues.

======================================================================

	Major changes between "less" versions 668 and 678

* Treat -r in LESS environment variable as -R.

* Add ESC-j and ESC-k commands (github #560).

* Add --no-paste option (github #523).

* Add --no-edit-warn option (github #513).

* Add --form-feed option (github #496).

* Add ESC-b command (github #615).

* Make TAB complete option name in -- command (github #531).

* Update the file size on an attempt to go past end of file.

* Make -R able to pass through any OSC escape sequences,
  not just OSC 8 (github #504).

* Setting LESS_IS_MORE=0 now disables "more" compatibility even
  if invoked via a file link named "more" (github #500).

* Pass through escape sequences in prompts even if -R is not set.

* Add LESS_SHELL_LINES to support shell prompts which use more than
  one line (github #514).

* Add LESSANSIOSCALLOW to define OSC types which may be passed through.

* Add LESSANSIOSCCHARS to define non-standard OSC intro chars.

* Add LESS_SIGUSR1 to define user signal handler (github #582).

* Add mouse and mouse6 commands to lesskey (github #569).

* Improve behavior of ^O^N and ^O^P commands.

* Leave stty tabs setting unchanged (github #620).

* Fix unexpected behavior when entering a partial command followed by 
  a valid command (github #543).

* Fix bug when coloring prompt string with SGR sequences (github #516).

* Fix bug when searching for text near an invalid UTF-8 sequence (github #542).

* Fix display bug when file contains ESC followed by NUL (github #550).

* Fix bug when using +:n +:p +:x or +:d on the command line (github #552).
